--- a/Main/Application/templates/Application/neet.html
+++ b/Main/Application/templates/Application/neet.html
@@ -2,5 +2,173 @@
 {% load static %}
 
 {% block content %}
-       
+
+<section id="section-exams" class="container-fluid" >
+    <div class="exams">
+        <div class="exams__names">
+            <button class="exams__names--btn">Board Exams</button>
+            <button class="exams__names--btn">School exams</button>
+            <button class="exams__names--btn">JEE - Mains</button>
+            <button class="exams__names--btn">JEE - Advanced</button>
+            <button class="exams__names--btn" style="color: white;background-color:#D60B3C;">NEET</button>
+            <button class="exams__names--btn">Previous Year Q's</button>
+        </div>
+        <div class="examination" style="margin-top: 5rem;">
+            <div class="examination__content">
+                <img class="state-img3" src="{% static 'images/ellipses.png' %}" alt="">
+                <h3 class="examination__content--heading">Maths</h3>
+                <button class="examination__content--btn">View all</button>
+                <div class="examination__content--box">
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/91kkk-xBuOL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/81bX+IU66fL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">KC Sinha</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/41bQC4+CrmL._SX324_BO1,204,203,200_.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">RD SHARMA</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/11TH/71lwEUHwfeL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/10TH/71004LmJdgL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="examination__content">
+                <h3 class="examination__content--heading">Physics</h3>
+                <button class="examination__content--btn">View all</button>
+                <div class="examination__content--box">
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/11TH/911-2v5Yq8L.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/51AT9-5jfXL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/81KGHTlw9CL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/71EK+TbNJkL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/11TH/EXMPLAR.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="examination__content">
+                <h3 class="examination__content--heading">Chemistry</h3>
+                <div class="examination__content--box">
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/91DKzsw46IL.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/11TH/51IKPjxv2BL._SX258_BO1,204,203,200_.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/413THTvmAvL._SX324_BO1,204,203,200_.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/12TH/91Y+GfBkNM.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                    <div class="examination__content--box-item">
+                        <img class="examination__content--box-item-img" src="{% static 'books/11TH/A1-k8aBzP-L.jpg' %}" alt="">
+                        <button class="examination__content--box-item-btn">Solve Now</button>
+                        <h3 class="examination__content--box-item-title">NCERT - XII</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="section-clear" class="container-fluid">
+        <h1 class="clear-heading">Clear your Doubts in just 2 Steps</h1>
+        <img class="clear-img" src="{% static 'images/ellipses.png' %}" alt="">
+        <div class="clear">
+            <img class="clear__img1" src="{% static 'images/one.png' %}" alt="">
+            <img class="clear__img2" src="{% static 'images/brain.png' %}" alt="">
+            <img class="clear__img3" src="{% static 'images/two.png' %}" alt="">
+        </div>
+        <h2 class="clear-para">Our complex Searching Algorithm Finds solutions for you and saves time.</h2>
+        <button class="clear-btn">Clarify your doubts now!</button>
+    </section>
+
+    <section id="section-live" class="container-fluid">
+        <h1 class="live-heading" style="border-bottom: none;">LIVE classes</h1>
+        <div class="live">
+            <img class="live__img" src="{% static 'images/live1.png' %}" alt="">
+            <div class="live__box">
+                <div class="live__box--content">
+                    <img class="live__box--content-img" src="{% static 'images/global-network.png' %}" alt="">
+                    <h3 class="live__box--content-heading">Accessible everywhere</h3>
+                    <h5 class="live__box--content-para">Access to quality education anytime, anywhere</h5>
+                </div>
+                <div class="live__box--content">
+                    <img class="live__box--content-img" src="{% static 'images/coaching.png' %}" alt="">
+                    <h3 class="live__box--content-heading">Expert Teachers</h3>
+                    <h5 class="live__box--content-para">Unlimited access to video solutions</h5>
+                </div>
+                <div class="live__box--content">
+                    <img class="live__box--content-img" src="{% static 'images/presentation.png' %}" alt="">
+                    <h3 class="live__box--content-heading">Interactive Sessions</h3>
+                    <h5 class="live__box--content-para">Small groups for maximum student - teacher interaction</h5>
+                </div>
+            </div>
+            <img class="ellipses4" src="{% static 'images/ellipses.png' %}" alt="">
+        </div>
+        
+        <h2 class="live-free">FIRST CLASS FREE!</h2>
+        <button class="live-btn" href="">Book a class now!</button>
+    </section>
+
+    <section id="section-video" class="container-fluid">
+        <h1 class="video-heading">Microconcept videos</h1>
+        <div class="video">
+            <img class="video__img" src="{% static 'images/tablet.png' %}" alt="">
+            <div class="video__box">
+                <div class="video__box--content">
+                    <img class="video__box--content-img" src="{% static 'images/chronometer.png' %}" alt="">
+                    <h3 class="video__box--content-heading">Save hours of scrolling pages</h3>
+                </div>
+                <div class="video__box--content">
+                    <img class="video__box--content-img" src="{% static 'images/bulb.png' %}" alt="">
+                    <h3 class="video__box--content-heading">Clarify your concepts instantly</h3>
+                    <p class="video__box--content-para">Find multilingual video explainations to frequently confused concepts from every subject</p>
+                </div>
+                <button class="video__box--btn" href="">Start learning now</button>
+            </div>
+            
+        </div>
+        <img class="ellipses5" src="{% static 'images/ellipses.png' %}" alt="">
+    </section>
+
 {% endblock content %}
