--- a/Main/Application/templates/Application/previousyear.html
+++ b/Main/Application/templates/Application/previousyear.html
@@ -135,6 +135,7 @@
             </div>
             <h2 class="heading">Central Boards</h2>
             <div class="examination__content">
+                <img class="state-img3" src="{% static 'images/ellipses.png' %}" alt="">
                 <h3 class="examination__content--heading">CBSE</h3>
                 <button class="examination__content--btn">View all</button>
                 <div class="examination__content--box">
