--- a/Main/Application/templates/Application/jeeadvance.html
+++ b/Main/Application/templates/Application/jeeadvance.html
@@ -6,12 +6,12 @@
 <section id="section-exams" class="container-fluid" >
     <div class="exams">
         <div class="exams__names">
-            <button class="exams__names--btn">Board Exams</button>
-            <button class="exams__names--btn">School exams</button>
-            <button class="exams__names--btn">JEE - Mains</button>
-            <button class="exams__names--btn" style="color: white;background-color:#D60B3C;">JEE - Advanced</button>
-            <button class="exams__names--btn">NEET</button>
-            <button class="exams__names--btn">Previous Year Q's</button>
+            <button onclick="location.href={% url 'boardexams' %}" class="exams__names--btn" >Board Exams</button>
+            <button onclick="location.href={% url 'schoolexams' %}" class="exams__names--btn" >School exams</button>
+            <button onclick="location.href={% url 'jeemain' %}" class="exams__names--btn">JEE - Mains</button>
+            <button onclick="location.href={% url 'jeeadvance' %}" class="exams__names--btn" style="color: white;background-color:#D60B3C;" >JEE - Advanced</button>
+            <button onclick="location.href={% url 'neet' %}" class="exams__names--btn" >NEET</button>
+            <button onclick="location.href={% url 'previousyear' %}" class="exams__names--btn">Previous Year Q's</button>
         </div>
         <div class="examination" style="margin-top: 5rem;">
             <div class="examination__content">
