--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -732,23 +732,23 @@ body {
 
 .embark-img {
   position: absolute;
-  height: 100%;
+  height: 130%;
   top: 0%;
   right: -35%; }
 
 .embark {
   display: grid;
-  grid-template-columns: 55% 45%; }
+  grid-template-columns: 50% 50%; }
   .embark__box {
     width: fit-content;
     align-self: center;
     display: grid;
-    row-gap: 4rem; }
+    row-gap: 2rem; }
     .embark__box--title {
       font-family: 'Poppins',sans-serif;
       color: #1E4196;
-      font-size: 3.5rem;
-      width: 96%;
+      font-size: 3rem;
+      width: 90%;
       font-weight: 700; }
       .embark__box--title span {
         color: #D60B3C; }
@@ -778,13 +778,16 @@ body {
         width: 80%;
         align-self: start; }
   .embark__picture {
-    justify-items: center;
+    justify-content: end;
+    justify-items: end;
     display: grid;
     position: relative;
-    width: 90%; }
+    width: 70%; }
     .embark__picture--img {
+      position: relative;
+      left: 40%;
       width: 90%;
-      height: 50rem; }
+      height: 40rem; }
     .embark__picture--title {
       top: 3rem;
       font-size: 3rem;
@@ -795,7 +798,7 @@ body {
 
 .embark-btn {
   border: none;
-  font-size: 2.5rem;
+  font-size: 2rem;
   padding: .5rem 3rem;
   background-color: #D60B3C;
   border-radius: 1rem;
@@ -1395,52 +1398,37 @@ body {
       border-top-left-radius: 1rem;
       border-top-right-radius: 1rem;
       border-bottom: none;
-      border-top: 0.1rem solid #4B4B4B; }
+      border-top: 0.1rem solid #4B4B4B;
+      border-right: 0.1rem solid #4B4B4B;
+      box-shadow: 0rem -0.3rem 1rem rgba(0, 0, 0, 0.2);
+      background-color: white; }
       .jee__names--btn:hover, .jee__names--btn:focus {
         background-color: #DE0B38;
         color: white;
         outline: none; }
   .jee__content {
-    box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.1);
     border-radius: 2rem;
-    background-color: white;
     width: 100%;
     position: relative;
     z-index: 1; }
     .jee__content--heading {
+      border: 0.4rem solid #D60B3C;
       text-align: center;
       font-weight: 500;
       margin-top: 3rem;
       font-size: 3rem;
-      border: none;
+      padding: 1rem 3rem;
+      position: relative;
+      left: 50%;
+      border-radius: 20rem;
+      transform: translateX(-50%);
+      width: fit-content;
       color: #D60B3C;
       font-family: 'Poppins',sans-serif;
       font-weight: 700;
       margin-bottom: 3rem; }
       .jee__content--heading span {
         color: #1E4190; }
-    .jee__content--box {
-      margin-top: 5rem; }
-      .jee__content--box-img {
-        width: 7rem;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%); }
-      .jee__content--box-heading {
-        font-family: 'Poppins',sans-serif;
-        font-size: 3rem;
-        font-weight: 700;
-        color: #1E4190;
-        text-align: center;
-        margin-top: 2rem; }
-      .jee__content--box-para {
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #4B4B4B;
-        font-size: 2rem;
-        width: 40%;
-        text-align: center; }
   .jee__build {
     border-radius: 2rem;
     background-color: white;
@@ -1457,45 +1445,52 @@ body {
         transform: translateX(-50%); }
       .jee__build--box-heading {
         font-family: 'Poppins',sans-serif;
-        font-size: 3rem;
+        font-size: 2.3rem;
         color: #1E4190;
         text-align: center;
         margin-top: 2rem;
         font-weight: 700; }
       .jee__build--box-para {
+        width: 80%;
         position: relative;
         left: 50%;
         transform: translateX(-50%);
         color: #4B4B4B;
-        font-size: 2rem;
+        font-size: 1.6rem;
         text-align: center;
         color: #4B4B4B; }
-  .jee .student__build {
-    border-radius: 2rem;
-    background-color: white;
-    width: 100%;
+  .jee .student {
     position: relative;
-    z-index: 1; }
-    .jee .student__build--box {
-      margin-top: 5rem;
-      margin-bottom: 5rem; }
-      .jee .student__build--box-heading {
-        font-family: 'Poppins',sans-serif;
-        font-size: 3rem;
-        font-weight: 800;
-        color: #D60B3C;
-        text-align: center;
-        margin-top: 2rem; }
-      .jee .student__build--box-para {
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        color: #1E4190;
-        font-family: 'Poppins',sans-serif;
-        font-weight: 700;
-        font-size: 2rem;
-        text-align: center; }
+    border: 0.4rem solid #D60B3C;
+    transform: translateX(-50%);
+    left: 50%;
+    border-radius: 20rem;
+    width: 70%; }
+    .jee .student__build {
+      background-color: white;
+      width: 100%;
+      position: relative;
+      z-index: 1; }
+      .jee .student__build--box {
+        margin-bottom: 1rem; }
+        .jee .student__build--box-heading {
+          font-family: 'Poppins',sans-serif;
+          font-size: 3rem;
+          font-weight: 800;
+          color: #D60B3C;
+          text-align: center;
+          margin-top: 2rem; }
+        .jee .student__build--box-para {
+          position: relative;
+          left: 50%;
+          transform: translateX(-50%);
+          color: #1E4190;
+          font-family: 'Poppins',sans-serif;
+          font-weight: 700;
+          font-size: 2rem;
+          text-align: center; }
   .jee .reading {
+    margin-top: 5rem;
     display: grid;
     grid-template-columns: 40% 60%;
     align-items: center;
@@ -1508,19 +1503,21 @@ body {
       max-width: 100%; }
     .jee .reading__content {
       display: grid;
-      row-gap: 4rem;
+      row-gap: 2rem;
       justify-self: center; }
       .jee .reading__content--sub {
         display: grid;
         grid-template-columns: 10% 90%;
         column-gap: 2rem;
         grid-template-areas: 'img tit' 'img para'; }
-        .jee .reading__content--sub-img {
-          margin-top: 1rem;
+        .jee .reading__content--sub-icon {
           align-self: start;
           grid-area: img;
           width: 5rem;
-          height: auto; }
+          font-weight: 800;
+          color: #D60B3C;
+          font-size: 3rem;
+          font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; }
         .jee .reading__content--sub-title {
           grid-area: tit;
           color: #1E4190;
@@ -1632,65 +1629,68 @@ body {
         .jee .best__content--box-sub {
           font-size: 1.5rem;
           text-align: center; }
-  .jee .say {
+  .jee .about {
     margin-top: 7rem;
     margin-bottom: 3rem; }
-    .jee .say__heading {
-      margin-bottom: 4rem;
+    .jee .about__heading {
+      margin-bottom: 13rem;
       text-align: center;
       font-size: 3rem;
       font-family: 'Poppins',sans-serif;
       font-weight: 700;
       color: #4B4B4B; }
-    .jee .say__content {
+    .jee .about__content {
       box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.2);
-      width: 35rem;
+      width: 40%;
       display: grid;
       border-radius: 2rem;
       position: relative;
       margin-bottom: 3rem;
       left: 50%;
       transform: translateX(-50%);
-      grid-template-columns: 10% 90%;
       padding: 2rem 3rem; }
-      .jee .say__content--img {
-        grid-row: 1 / 3;
-        width: 7rem;
-        height: 7rem;
+      .jee .about__content--img {
+        transform: translateX(-50%);
+        left: 50%;
+        top: -4rem;
+        position: absolute;
+        width: 12rem;
+        height: 12rem;
         background-image: url("../static/images/teach2.jpg");
         background-size: cover;
         border-radius: 20rem; }
-      .jee .say__content--para {
-        justify-self: end;
-        width: 80%;
-        font-size: 1.5rem;
-        text-align: right;
+      .jee .about__content--para {
+        margin-top: 8rem;
+        justify-self: center;
+        width: 100%;
+        font-size: 2.5rem;
+        text-align: center;
         font-family: 'Poppins',sans-serif;
-        font-weight: 600; }
-      .jee .say__content--sub {
-        justify-self: end;
+        font-weight: 500; }
+      .jee .about__content--sub {
+        justify-self: center;
         color: #1E4190;
         font-family: 'Roboto',sans-serif;
-        font-weight: 700;
+        font-weight: 500;
         margin-top: 1rem;
-        width: 35%;
-        font-size: 1.5rem;
-        text-align: right; }
-    .jee .say__btn {
+        font-size: 2rem;
+        text-align: cneter; }
+    .jee .about__btn {
       border: none;
-      font-size: 2rem;
+      font-size: 2.5rem;
       padding: .5rem 3rem;
       background-color: #D60B3C;
       border-radius: 1rem;
       color: white;
+      margin-top: 3rem;
       font-family: 'Poppins',sans-serif;
       font-weight: 700;
       position: relative;
-      left: 50%;
+      left: 51%;
       transform: translateX(-50%); }
-      .jee .say__btn:hover {
+      .jee .about__btn:hover {
         filter: brightness(90%); }
-      .jee .say__btn:focus, .jee .say__btn:active {
+      .jee .about__btn:focus, .jee .about__btn:active {
         outline: none;
         border: none; }
 
@@ -2308,14 +2308,13 @@ nav {
   position: relative;
   transform: translateX(-50%);
   left: 50%;
-  font-size: 3rem;
+  font-size: 3.5rem;
   color: #4B4B4B;
   font-family: 'Poppins',sans-serif;
   font-weight: 700;
   word-spacing: 1rem;
-  border-bottom: 0.5rem solid #D60B3C;
   width: fit-content;
-  margin-top: 5rem;
+  margin-top: 6rem;
   border-radius: .3rem; }
 
 .need {
@@ -3749,12 +3748,11 @@ nav {
 #section-embark {
   position: relative;
   height: fit-content;
-  margin-top: 6rem; }
+  margin-top: 5rem; }
 
 #section-jee {
   margin-top: 5rem;
-  position: relative;
-  margin-left: -2rem; }
+  position: relative; }
 
 #section-need {
   margin-bottom: 20rem;
