--- a/Main/Application/templates/Application/course.html
+++ b/Main/Application/templates/Application/course.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-    <section id="section-embark" class="container-fluid">
+    <!-- <section id="section-embark" class="container-fluid">
         <img class="embark-img" src="{% static 'images/ellipses.png' %}" alt="">
         <div class="embark">
             <div class="embark__picture">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <button class="embark-btn" onclick="location.href='{% url 'join' %}'">JOIN the Course now.</button>
-    </section>
+    </section> -->
 
     <section id="section-jee" class="container-fluid" >
         <img class="jee-img1" src="{% static 'images/ellipses.png' %}" alt="">
@@ -138,6 +138,7 @@
                 </div>
 
                 <div class="best">
+                    <img class="jee-img1" src="{% static 'images/ellipses.png' %}" alt="" style="transform: translateY(140rem);">
                     <h2 class="best__heading">By the BEST Teachers</h2>
                     <div class="best__content">
                         <div class="best__content--box">
