--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -1395,13 +1395,16 @@ body {
       font-size: 1.5rem;
       font-family: 'Roboto',sans-serif;
       font-weight: 500;
-      border-top-left-radius: 1rem;
+      border-right: 0.1rem solid #bbb9b9;
       border-top-right-radius: 1rem;
-      border-bottom: none;
-      border-top: 0.1rem solid #4B4B4B;
-      border-right: 0.1rem solid #4B4B4B;
-      box-shadow: 0rem -0.3rem 1rem rgba(0, 0, 0, 0.2);
       background-color: white; }
+      .jee__names--btn:not(:first-child) {
+        border-top: none;
+        box-shadow: 0rem -0.2rem 1.5rem rgba(0, 0, 0, 0.1);
+        border-bottom: 0.1rem solid #bbb9b9; }
+      .jee__names--btn:first-child {
+        border-top: 0.1rem solid #bbb9b9;
+        border-bottom: 0.1rem solid #bbb9b9; }
       .jee__names--btn:hover, .jee__names--btn:focus {
         background-color: #DE0B38;
         color: white;
